feat: migrate plugin baseline to Minecraft 26.1